<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="match_parent">
   <LinearLayout
        android:id="@+id/outerwrapper"
        android:layout_width="fill_parent" android:weightSum="1"
        android:orientation="horizontal" android:layout_height="fill_parent">
        
        <LinearLayout
        android:id="@+id/wrapper"
        android:layout_width="fill_parent" android:weightSum="1"
        android:orientation="vertical" android:layout_height="fill_parent">
        <LinearLayout android:id="@+id/LinearLayout02" android:layout_width="match_parent" android:layout_weight="0.25" android:layout_height="0dp">
            <Button android:id="@+id/Button01"  android:background="@drawable/signaldiode" android:layout_width="0dp"  android:layout_weight="1" android:layout_height="fill_parent"></Button>
            <Button android:id="@+id/Button02" android:text="@string/Button2"  android:textSize="30sp" android:layout_width="0dp"  android:layout_weight="1" android:layout_height="fill_parent"></Button>
            <Button android:id="@+id/Button03" android:text="@string/Button3"  android:textSize="30sp" android:layout_width="0dp"  android:layout_weight="1" android:layout_height="fill_parent"></Button>
            <Button android:id="@+id/Button04" android:text="@string/Button4"  android:textSize="30sp" android:layout_width="0dp"  android:layout_weight="1" android:layout_height="fill_parent"></Button>
            <Button android:id="@+id/Button05" android:text="@string/Button5"  android:textSize="30sp" android:layout_width="0dp"  android:layout_weight="1" android:layout_height="fill_parent"></Button>

        </LinearLayout>
        <LinearLayout android:id="@+id/LinearLayout01" android:layout_width="match_parent" android:layout_weight="0.25" android:layout_height="0dp">
            <Button android:id="@+id/Button06" android:text="@string/Button6"  android:textSize="30sp" android:layout_width="0dp" android:layout_weight="1" android:layout_height="fill_parent"></Button>
            <Button android:id="@+id/Button07" android:text="@string/Button7"  android:textSize="30sp" android:layout_width="0dp" android:layout_weight="1" android:layout_height="fill_parent"></Button>
            <Button android:id="@+id/Button08" android:text="@string/Button8"  android:textSize="30sp" android:layout_width="0dp" android:layout_weight="1" android:layout_height="fill_parent"></Button>
            <Button android:id="@+id/Button09" android:text="@string/Button9"  android:textSize="30sp" android:layout_width="0dp" android:layout_weight="1" android:layout_height="fill_parent"></Button>
            <Button android:id="@+id/Button10" android:text="@string/Button10"  android:textSize="30sp" android:layout_width="0dp" android:layout_weight="1" android:layout_height="fill_parent"></Button>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearLayout1" android:layout_width="match_parent" android:layout_weight="0.25" android:layout_height="0dp">
            <Button android:id="@+id/Button11" android:text="@string/Button11"  android:textSize="30sp" android:layout_weight="1" android:layout_width="0dp" android:layout_height="fill_parent"></Button>
            <Button android:id="@+id/Button12" android:text="@string/Button12"  android:textSize="30sp" android:layout_weight="1" android:layout_width="0dp" android:layout_height="fill_parent"></Button>
            <Button android:id="@+id/Button13" android:text="@string/Button13"  android:textSize="30sp" android:layout_weight="1" android:layout_width="0dp" android:layout_height="fill_parent"></Button>
            <Button android:id="@+id/Button14" android:text="@string/Button14"  android:textSize="30sp" android:layout_weight="1" android:layout_width="0dp" android:layout_height="fill_parent"></Button>
            <Button android:id="@+id/Button15" android:text="@string/Button15"  android:textSize="30sp" android:layout_weight="1" android:layout_width="0dp" android:layout_height="fill_parent"></Button>
        </LinearLayout>
        
    </LinearLayout>
        <LinearLayout android:id="@+id/linearLayout4" android:layout_width="match_parent" android:layout_weight="0.25" android:layout_height="0dp">
            <Button android:id="@+id/ButtonLeft" android:text="@string/ButtonLeft"  android:textSize="30sp" android:layout_weight="1" android:layout_width="0dp" android:layout_height="fill_parent"></Button>
            <Button android:id="@+id/ButtonRight" android:text="@string/ButtonRight"  android:textSize="30sp" android:layout_weight="1" android:layout_width="0dp" android:layout_height="fill_parent"></Button>
            <com.briandorey.pickandplace.componentpicker.RotaryKnobView 
   android:id="@+id/jogView"
  android:layout_width="100dp"
		android:layout_height="100dp"
		android:layout_gravity="center"/>

 
        </LinearLayout>
       </LinearLayout>
    
    
</LinearLayout>
